Rename project and update description in package.json

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "ephemera-solidity-starter-template",
-    "description": "Solidity Starter Template for Ephemera contracts",
+    "name": "normies",
+    "description": "On-chain generative faces",
     "version": "1.0.0",
     "dependencies": {
         "@manifoldxyz/creator-core-solidity": "^3.0.0",
